--- a/src/components/ListWorkouts.css
+++ b/src/components/ListWorkouts.css
@@ -1,10 +1,14 @@
 .workoutList {
-    border: 1px solid black;
+    border: none;
     border-radius: 25px;
     padding: 20px;
-    color: black;
+    color: black;    
 }
 
 .workoutList .workouts {
     padding: 15px;
+    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
 }
