--- a/src/components/Split.css
+++ b/src/components/Split.css
@@ -31,3 +31,11 @@
 .workoutCards .overlay .showWorkout{
     color: red;
 }
+
+.workoutGrid {
+    padding: 15px;
+    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
