--- a/src/components/CreateWorkout.css
+++ b/src/components/CreateWorkout.css
@@ -1,6 +1,7 @@
-.formBody {
+.formBodyWorkout {
     border: 1px solid black;
     background-color: #AEE1FC;
+    box-shadow: 0px 0px 1px 5000px rgba(0,0,0,0.8);
     border-radius: 25px;
     padding: 20px;
     width: 500px;
@@ -11,10 +12,22 @@
 }
 
 .addExercise {
-    display: flex;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
+    max-width: 80em;
+    padding: 1em 0;
+    margin-top: -80px;
+}
+
+.addButton {
+    margin-left: 35%;
 }
 
 .label {
     font-size: 20px;
     font-weight: bold;
+}
+
+#addWorkout {
+    margin-left: 35%;
 }
