--- a/src/components/Exercise.css
+++ b/src/components/Exercise.css
@@ -1,8 +1,7 @@
 .exerciseBody {
     border-radius: 25px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    background: #48D4FA;
-    padding: 1px 1px 1px 1px;
+    background: #468DA3;
+    color: white;
     margin: 5px 0px 5px 0px;
     width: 250px;
 }
