--- a/src/components/ListExercises.css
+++ b/src/components/ListExercises.css
@@ -1,7 +1,11 @@
 .exercisesBody {
-    border: 1px solid black;
-    border-radius: 25px;
     padding: 20px;
-    color: black;
-    margin-right: 10px;
+    color: black;    
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
+    max-width: 80em;
+    padding: 1em 0;
+    text-align: center;
+    margin-left: 20%
 }
