--- a/src/components/Workout.css
+++ b/src/components/Workout.css
@@ -2,7 +2,7 @@
     border-radius: 25px;
     background-color: black;
     color: white;
-    padding: 1px 1px 1px 1px;
+    padding: 5px;
     margin: 2px;
     margin-right: 10px;
     width: 250px;
