--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .App {
   text-align: center;
 }
+
+.pp-header {
+  background-color: rgb(196, 0, 0);
+  height: 150px;
+  padding: 0px;
+  color: rgb(255, 0, 0);
+  
+}
