--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ code {
   margin-top: 1rem;
   padding: 1rem;
   background-color: lightblue;
+  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
