--- a/src/components/Workout/CreateSplit.css
+++ b/src/components/Workout/CreateSplit.css
@@ -3,7 +3,8 @@
     border-radius: 25px;
     padding: 20px;
     width: auto;
-    height: auto;
+    height: 600px;
+    overflow-y: scroll;
 }
 
 .splitForm .label {
@@ -24,21 +25,23 @@
     margin-top: 25px;
 }
 
-
-.makeNewSplit button {
+#addSplit {
     background-color: transparent;
-    border: 1px solid white;
-    color: white;
-    padding: 20px;
+    border: 1px solid black;
+    color: black;
+    padding-top: 10px;
+    padding-bottom: 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin-top: 40px;
+    width: 120px;
 }
 
-.makeNewSplit button:hover {
+#addSplit:hover {
     background-color: #4FB9FA;
+    color: white;
     border: none;
 }
 
@@ -54,26 +57,6 @@
 .createSplitForm {
     margin: 10px;
 }
-.addName {
-    display: flex;
-    margin: 10px;
-    margin-left: 50px;
-    font-size: 20px
-    
-}
-.addName label{
-    margin-right: 5px;
-}
-
-.addNotes {
-    display: flex;
-    margin: 10px;
-    margin-left: 50px;
-    font-size: 20px;
-}
-.addNotes label{
-    margin-right: 5px;
-}
 
 .addingWorkout{
     display: block;
@@ -88,13 +71,14 @@
 
 .addingWorkout .workoutList {
     margin-top: 20px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    max-width: 80em;
-    padding: 1em 0;
+
+    
 }
 
 #addSplit {
     margin-left: 450px;
+}
+
+#notesInput {
+    margin-top: 30px;
 }
