--- a/src/components/Workout/ListExercises.css
+++ b/src/components/Workout/ListExercises.css
@@ -2,10 +2,10 @@
     padding: 20px;
     color: black;    
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px;
     max-width: 80em;
     padding: 1em 0;
     text-align: center;
-    margin-left: 20%
+    margin-left: -10px;
 }
