--- a/src/components/Workout/Split.css
+++ b/src/components/Workout/Split.css
@@ -15,13 +15,6 @@
     margin-left: 30px;
 }
 
-.splitName {
-}
-
-.splitNotes {
-    margin-top: -260px
-}
-
 .workoutList {
     display:flex;
     margin: 10px;
@@ -46,4 +39,23 @@
 
 #notes {
     color: grey;
+    margin-top: -10px;
+}
+
+.card-top {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+
+.card-top #update{
+    height: 38px;
+}
+.update-delete button{
+    margin-top: -30px;
+    width: 80px;
+}
+
+#delete{
+    margin-left: 50px;
 }
