--- a/src/components/contai.css
+++ b/src/components/contai.css
@@ -18,6 +18,9 @@
       display: flex;
       margin: 50px;
   }
+  .backg{
+      background-color: rgb(100, 214, 214)
+  }
 
   .bt{
     background-color: #e7e7e7;
@@ -38,8 +41,8 @@
   .bt2{
     background-color: #ffdab9    ;
     position:absolute;
-    right: -1110px;
-    top: -430px;
+    right: -1100px;
+    top: -275px;
     border: none;
     color: black;
     padding: 10px 13px;
@@ -52,14 +55,25 @@
     font-size: 12px;
   }
 
+.item{
+    border-top: 1px solid rgb(112, 110, 110);
+}
   .inf{
     font-size: large;
     position:relative;
-    bottom: 200px;
+    bottom: 100;
+    background-color:rgb(211, 205, 205);
+    margin-top: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 15px;
+    list-style-type: none;
+    border-radius: 5%;
   }
   .welcome{
       font-size: 20px;
       position: absolute;
       top: 1;
       left: 500px;
+     
   }
