--- a/src/components/Workout/ListWorkouts.css
+++ b/src/components/Workout/ListWorkouts.css
@@ -1,9 +1,6 @@
-.workoutList .workouts {
-  margin-top: 20px;
+#workoutList {
   padding: 15px;
-  display: flex;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 10px;
-  width: auto;
 }
