can now add exercises to MyExercises from API options

--- a/client/src/components/Workout/CreateExercise.css
+++ b/client/src/components/Workout/CreateExercise.css
@@ -13,3 +13,42 @@ input {
 #addExercise {
     margin-left: 170px;
 }
+
+#selectExerciseCategory {
+    width: 960px;
+    margin: 0 auto;
+}
+
+.dropdown{
+    display: inline-block;
+    width: auto;
+    margin: 0 auto;
+}
+
+#dropdown-item-button {
+    display: inline-block;
+    width: auto;
+    margin: 0 auto;
+}
+
+#exercises-dropdown {
+    height: 400px;
+    overflow-y: scroll;
+}
+
+.exercise Button{
+    width: 300px;
+}
+
+.imagesFront {
+    position: relative;
+}
+
+.imagesFront > img {
+    position: relative;
+    background-image: url('https://wger.de/static/images/muscles/muscular_system_front.svg');
+}
+
+.imagesFront > img:first-child{
+    z-index: 2;
+}
