--- a/client/src/components/contai.css
+++ b/client/src/components/contai.css
@@ -38,12 +38,9 @@
 }
 
 .bt2 {
-    background-color: #ffdab9;
-    position: absolute;
-    right: 30px;
-    top: 75px;
-    border: none;
-    color: black;
+    position: relative;
+    right: -1300px;
+    top: -80px;
     padding: 10px 13px;
     width: 150px;
     height: 75px;
@@ -60,18 +57,65 @@
 .inf {
     font-size: large;
     position: relative;
-    bottom: -200px;
-    background-color: rgb(211, 205, 205);
-    margin-top: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 15px;
-    list-style-type: none;
-    border-radius: 5%;
+    bottom: -125px;
 }
 .welcome {
     font-size: 20px;
     position: absolute;
     top: 1;
     left: 500px;
+}
+
+body{
+    margin-top:20px;
+    color: #1a202c;
+    text-align: left;
+    background-color: #e2e8f0;    
+}
+.main-body {
+    padding: 15px;
+}
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
+}
+
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
+
+.bg-gray-300 {
+    background-color: #e2e8f0;
+}
+.h-100 {
+    height: 100%!important;
+}
+.shadow-none {
+    box-shadow: none!important;
 }
