--- a/client/src/components/Workout/Exercise.css
+++ b/client/src/components/Workout/Exercise.css
@@ -10,3 +10,16 @@
     display: inline;
     padding: 5px;
 }
+
+#updateTitle {
+    z-index: 1000;
+    width: 500px;
+}
+
+#updateDesc {
+    height: 250px;
+}
+
+#poo {
+    z-index: 2000;
+}
