--- a/client/src/components/Workout/Split.css
+++ b/client/src/components/Workout/Split.css
@@ -42,9 +42,9 @@
     margin-top: -10px;
 }
 
-.card-top {
+#top {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 10px;
 }
 
@@ -58,4 +58,13 @@
 
 #delete {
     margin-left: 50px;
+}
+
+#workoutModal {
+    width: 0px;
+    height: 0px;
+    border: 0px transparent;
+    position: relative;
+    margin-left: 650px;
+    margin-top: -100px;
 }
