--- a/client/src/components/contai.css
+++ b/client/src/components/contai.css
@@ -119,3 +119,13 @@ body{
 .shadow-none {
     box-shadow: none!important;
 }
+
+.tableentry{
+    padding: 10px;
+}
+.table_morecondensed>thead>tr>th, 
+.table_morecondensed>tbody>tr>th, 
+.table_morecondensed>tfoot>tr>th, 
+.table_morecondensed>thead>tr>td, 
+.table_morecondensed>tbody>tr>td, 
+.table_morecondensed>tfoot>tr>td{ padding: 1px; }
