fixed some update functionality for workouts and made the createExercise component look nicer

--- a/client/src/components/Workout/CreateWorkout.css
+++ b/client/src/components/Workout/CreateWorkout.css
@@ -4,10 +4,10 @@
     box-shadow: 0px 0px 1px 5000px rgba(0, 0, 0, 0.8);
     border-radius: 25px;
     padding: 20px;
-    width: 550px;
-    position: absolute;
+    width: 750px;
+    position: relative;
     top: 160px;
-    left: 540px;
+    left: 25%;
     height: 400px;
     overflow-y: scroll;
 }
@@ -28,7 +28,11 @@
     font-size: 20px;
     font-weight: bold;
     margin-right: 10px;
-    margin-left: 40px;
+}
+
+#workoutNameInput {
+    position: relative;
+    left: 25%;
 }
 
 #addWorkout {
