fixed loading issue with exercises when creating a workout

--- a/client/src/components/Workout/CreateExercise.css
+++ b/client/src/components/Workout/CreateExercise.css
@@ -48,7 +48,10 @@ input {
     z-index: 2;
 }
 
+.mb-3{
+    position: relative;
+}
 .formInput {
     position: absolute;
-    left: 340px;
+    left: 140px;
 }
