added styling to the workouts page

--- a/client/src/components/Workout/Exercise.css
+++ b/client/src/components/Workout/Exercise.css
@@ -1,15 +1,20 @@
 .exerciseBody {
     border-radius: 25px;
-    background: #468da3;
-    color: white;
+    background: white;
+    color: #2C4457;
     margin: 5px 0px 5px 0px;
     width: 250px;
+}
+
+.exerciseBody:hover{
+    background: #99CAF7;
 }
 
 .exerciseStats {
     display: inline;
     padding: 5px;
 }
+
 
 #updateTitle {
     z-index: 1000;
@@ -18,4 +23,23 @@
 
 #updateDesc {
     height: 250px;
+}
+
+#deleteExercise {
+    background: none;
+    border: none;
+    position: relative;
+}
+
+#delExx{
+    border-radius: 100%;
+}
+
+#delExx:hover{
+    background: #F06362;
+}
+
+#exxBody {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
