--- a/client/src/components/Workout/Workout.css
+++ b/client/src/components/Workout/Workout.css
@@ -2,8 +2,8 @@
     border-radius: 25px;
     border: solid black;
     border-width: medium;
-    background-image: linear-gradient(#DCEFF5, #99CAF7);
-    color: black;
+    background: black;
+    color: #DCEFF5;
     padding: 5px;
     margin: 2px;
     margin-right: 10px;
