--- a/client/src/components/contai.css
+++ b/client/src/components/contai.css
@@ -24,7 +24,7 @@
 .bt {
     background-color: #e7e7e7;
     position: absolute;
-    left: 100px;
+    left: 680px;
     bottom: -205px;
     border: none;
     color: black;
@@ -58,12 +58,13 @@
     font-size: large;
     position: relative;
     bottom: -125px;
+    left: 250px;
 }
 .welcome {
     font-size: 20px;
     position: absolute;
     top: 1;
-    left: 500px;
+    left: 10px;
 }
 
 body{
@@ -122,6 +123,9 @@ body{
 
 .tableentry{
     padding: 10px;
+}
+.biggercard{
+    width: 300%
 }
 .table_morecondensed>thead>tr>th, 
 .table_morecondensed>tbody>tr>th, 
