--- a/client/src/components/Workout/Split.css
+++ b/client/src/components/Workout/Split.css
@@ -34,17 +34,20 @@
 }
 
 #title {
+    font-size: 24px;
     font-weight: bold;
+    text-align: center;
 }
 
 #notes {
     color: grey;
     margin-top: -10px;
+    text-align: center;
 }
 
 #top {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 10px;
 }
 
@@ -67,4 +70,62 @@
     position: relative;
     margin-left: 650px;
     margin-top: -100px;
+}
+
+#buttons {
+    position: relative;
+    left: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 0fr);
+    margin-top: 8px;
+}
+
+.splitButton {
+    border-radius: 15%;
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+}
+
+#updateButton:hover {
+    background: #F0E392;
+}
+
+#deleteSplit:hover {
+    background: #F06362;
+}
+
+#makePublic:hover {
+    background: #B0D996;
+}
+
+.workoutButton{
+    background: linear-gradient(#DCEFF5, #99CAF7);
+}
+
+.workoutButton:hover{
+    background: #99CAF7;
+}
+
+#vertModal {
+    border: none;
+    width: 10px;
+    height: 10px;
+}
+
+#workoutModal {
+    position: relative;
+    left: -780px;
+    top: -140px;
+}
+
+#workoutModalPublic {
+    position: relative;
+    left: 780px;
+    top: 140px;
+}
+
+#copySplit {
+    position: relative;
+    left: 110px;
 }
