--- a/client/src/components/contai.css
+++ b/client/src/components/contai.css
@@ -1,6 +1,6 @@
 .c {
     display: flex;
-    position: absolute;
+    position: relative;
     top: 10px;
     left: 0px;
     flex-direction: column;
@@ -23,9 +23,9 @@
 
 .bt {
     background-color: #e7e7e7;
-    position: absolute;
-    left: 680px;
-    bottom: -205px;
+    position: relative;
+    left: 650px;
+    bottom: -155px;
     border: none;
     color: black;
     padding: 7px 10px;
@@ -39,8 +39,8 @@
 
 .bt2 {
     position: relative;
-    right: -1300px;
-    top: -80px;
+    right: -1275px;
+    top: -450px;
     padding: 10px 13px;
     width: 150px;
     height: 75px;
@@ -57,7 +57,7 @@
 .inf {
     font-size: large;
     position: relative;
-    bottom: -125px;
+    bottom: 250px;
     left: 250px;
 }
 .welcome {
